test : 사진 신고 테스트 컬렉션 접근 방식 호환성 보정